<resources>
    <string name="app_name">Attendance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes(टिप्पणियाँ)</string>
    <string name="meter_reading">Meter Reading(मीटर रीडिंग)</string>
    <string name="vehicle_meter_reading_type">Vehicle Meter Reading Type (वाहन मीटर रीडिंग प्रकार)</string>
    <string name="colleagues_list">Colleagues List (सहकर्मियों की सूची)</string>
    <string name="pic_upload">Pic Upload(तस्वीर अपलोड करें)</string>
    <string name="choose_file">choose File</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="no_file_chosen">No file chosen</string>
    <string name="show_meter_reading_report">Show Meter Reading Report (मीटर रीडिंग रिपोर्ट दिखाएं)</string>
    <string name="attendence">Attendence</string>
    <string name="timestamp_18_january_2024_9_43_am">TimeStamp : 18 January, 2024 9:43 Am</string>
    <string name="hi_purohit_vinod_kumar">Hi Purohit Vinod Kumar</string>
    <string name="mark_attendence">Mark Attendence</string>
    <string name="choose_filee">Choose File</string>
    <string name="choose_fileee">Choose File</string>
    <string name="image">image</string>
    <string name="attendance">attendance</string>
    <string name="meter_readingg">Meter Reading</string>
    <string name="test_user_name">Test User Name</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_1">Button 1</string>
    <string name="textview_2">TextView 2</string>
    <string name="user_1">User 1</string>
    <string name="please_enter_3_or_more_character">Please enter 3 or more character</string>
    <string name="project_wise">PROJECT WISE</string>
    <string name="material_wise">Material Wise</string>
    <string name="report">Report</string>
    <string name="webviewtab">webViewTab</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="description">You can recharge your wallet here and utilize balance for all EAClub transcation</string>
</resources>