<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".MeterReading">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtColleaguesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colleagues_list"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/ColleagueName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/user_1"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:paddingStart="5dp"
        android:padding="2dp"
        android:clickable="true"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/txtColleaguesList"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:focusable="true">
    </TextView>
        <LinearLayout
            android:id="@+id/linerLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_bg"
            android:layout_marginTop="-1dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ColleagueName">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:padding="5dp"
                android:hint="Select Name"
                android:background="@drawable/autoselectborder"
                android:clickable="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:text="@string/please_enter_3_or_more_character"/>
        </LinearLayout>
    <TextView
        android:id="@+id/txtMeter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/vehicle_meter_reading_type"
        android:textSize="16sp"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/linerLayout1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>
    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/txtMeter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_reading"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/txtMeterReading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:padding="5dp"
        android:maxLength="6"
        android:layout_marginStart="10sp"
        android:inputType="number"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtReading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txtNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtMeterReading"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">
    </TextView>

    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="35dp"
        android:scrollbars="vertical"
        android:textSize="16sp"
        android:maxHeight="300dp"
        android:padding="5dp"
        android:maxLength="150"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginStart="10sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/txtNotes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtPicUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pic_upload"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@+id/notes"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:text="@string/choose_fileee"
        android:textAlignment="center"
        android:textColor="#2E2E2E"
        android:layout_marginStart="10dp"
        android:background="#CCCACA"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/txtPicUpload"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp">

    </Button>

        <TextView
            android:id="@+id/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="10dp"
            android:text="@string/no_file_chosen"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPicUpload"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/show_meter_reading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/text_view_background"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/show_meter_reading_report"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>