<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F3F1F1"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_menu_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/name"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="9dp"
                android:includeFontPadding="false"
                android:text="@string/test_user_name"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/menu"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_fingerprint_24"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_account_circle_24"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_exit_to_app_24"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/image"
                android:src="@drawable/baseline_refresh_24"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/mark_attendence"
                android:textColor="#E30B0B"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="1dp"
                    android:background="#F3F1F1"
                    android:contentDescription="@string/image"
                    android:src="@drawable/baseline_access_time_24">

                </ImageView>

                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="3dp"
                    android:background="#F3F1F1"
                    android:text="@string/timestamp_18_january_2024_9_43_am"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold">

                </TextView>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="26dp"
                    android:layout_marginEnd="3dp"
                    android:background="#F3F1F1">

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/attendence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attendance">

                    </com.google.android.material.tabs.TabItem>

                    <com.google.android.material.tabs.TabItem
                        android:id="@+id/meterReading"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="@string/meter_readingg">

                    </com.google.android.material.tabs.TabItem>
                </com.google.android.material.tabs.TabLayout>

                <FrameLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    app:layout_constraintTop_toBottomOf="@+id/text1">

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/image"
                app:layout_constraintEnd_toStartOf="@+id/text1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:srcCompat="@drawable/baseline_star_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>